[package]
name = "bus_plus"
version = "0.1.0"
authors = ["Joel <joel.attano@gmail.com>", "Casper Norrbin", "Carl Willman", "Björn Mosten"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
protobuf = { version = "2", features = ["with-bytes"] }
quick-protobuf = "0.8.0"
curl = "0.4.35"
yaml-rust = "0.4.5"
tempdir = "0.3"
zip = "0.5.11"
csv = "1.1"
tokio = "0.2.25"
mongodb = "1.2.0"
geoutils = "0.4"
rand = "0.8.0"
